--- a/src/Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -9,7 +9,7 @@
 <div class="container account-login-container">
     <h2>@ViewData["Title"]</h2>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-4">
             <section>
                 <form method="post">
                     <hr />
@@ -53,6 +53,38 @@
                         Password: <b>Pass@word1</b>
                     </p>
                 </form>
+            </section>
+        </div>
+        <div class="col-md-6 col-md-offset-2">
+            <section>
+                <h3>Use another service to log in.</h3>
+                <hr />
+                @{
+                    if ((Model.ExternalLogins?.Count ?? 0) == 0)
+                    {
+                        <div>
+                            <p>
+                                There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                    article
+                                    about setting up this ASP.NET application to support logging in via external services
+                                </a>.
+                            </p>
+                        </div>
+                    }
+                    else
+                    {
+                        <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                            <div>
+                                <p>
+                                    @foreach (var provider in Model.ExternalLogins!)
+                                    {
+                                        <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                    }
+                                </p>
+                            </div>
+                        </form>
+                    }
+                }
             </section>
         </div>
     </div>
