--- a/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
+++ b/src/BlazorAdmin/Pages/CatalogItemPage/List.razor
@@ -1,5 +1,5 @@
 ﻿@page "/admin"
-@attribute [Authorize(Roles = BlazorShared.Authorization.Constants.Roles.ADMINISTRATORS)]
+@attribute [Authorize(Roles = BlazorShared.Authorization.Constants.RoleCombinations.ADMIN_PORTAL_ROLES)]
 @inherits BlazorAdmin.Helpers.BlazorComponent
 @namespace BlazorAdmin.Pages.CatalogItemPage
 
