--- a/src/BlazorAdmin/Shared/MainLayout.razor
+++ b/src/BlazorAdmin/Shared/MainLayout.razor
@@ -4,7 +4,7 @@
 @inherits BlazorAdmin.Helpers.BlazorLayoutComponent
 
 
-<AuthorizeView Roles=@BlazorShared.Authorization.Constants.Roles.ADMINISTRATORS>
+<AuthorizeView Roles=@BlazorShared.Authorization.Constants.RoleCombinations.ADMIN_PORTAL_ROLES>
     <div class="sidebar">
         <NavMenu />
     </div>
