--- a/src/BlazorAdmin/Pages/RolePage/Delete.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Delete.razor
@@ -9,40 +9,41 @@
 
 @namespace BlazorAdmin.Pages.RolePage
 
-<div class="modal @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            @if (_item == null)
-            {
-                <Spinner></Spinner>
-            } else {
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete @_item.Role.Name</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <div class="row">                            
-                            <p>
-                            Are you sure you want to <strong class="text-danger">DELETE</strong> the <strong>@_item.Role.Name</strong> role?
-                            </p>                                
-                    </div>
+@if (_item == null)
+{
+    <Spinner></Spinner>
+} 
+else 
+{
+    <div class="modal @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">            
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Delete @_item.Role.Name</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="container">
+                        <div class="row">                            
+                                <p>
+                                Are you sure you want to <strong class="text-danger">DELETE</strong> the <strong>@_item.Role.Name</strong> role?
+                                </p>                                
+                        </div>
 
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Cancel</button>
+                    <button class="btn btn-danger" @onclick="() => DeleteClick(_item.Role.Id)">
+                        Delete
+                    </button>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Cancel</button>
-                <button class="btn btn-danger" @onclick="() => DeleteClick(_item.Role.Id)">
-                    Delete
-                </button>
-            </div>
-            }
         </div>
     </div>
-</div>
-
+}
 @if (_showDeleteModal)
 {
     <div class="modal-backdrop fade show"></div>
@@ -59,8 +60,6 @@
 
     private async Task DeleteClick(string id)
     {
-        // TODO: Add some kind of "are you sure" check before this
-
         var deleteResult = await RoleManagementService.Delete(id);
 
         await OnSaveClick.InvokeAsync(null);
@@ -69,8 +68,6 @@
 
     public async Task Open(string id)
     {
-        Logger.LogInformation("Now loading... /Roles/Delete/{Id}", id);
-
         await new Css(JSRuntime).HideBodyOverflow();
 
         _item = await RoleManagementService.GetById(id);
