--- a/src/BlazorAdmin/Pages/RolePage/Delete.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Delete.razor
@@ -1,7 +1,4 @@
-﻿@using BlazorAdmin.Interfaces
-@using BlazorAdmin.Models
-@using Microsoft.AspNetCore.Identity
-@inject ILogger<Delete> Logger
+﻿@inject ILogger<Delete> Logger
 @inject IJSRuntime JSRuntime
 @inject IRoleManagementService RoleManagementService
 
@@ -9,15 +6,20 @@
 
 @namespace BlazorAdmin.Pages.RolePage
 
-@if (_item == null)
-{
-    <Spinner></Spinner>
-} 
-else 
-{
-    <div class="modal @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">            
+@using BlazorAdmin.Interfaces
+@using BlazorAdmin.Models
+@using Microsoft.AspNetCore.Identity
+
+
+<div class="modal @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            @if (_item is null || _item.Role is null)
+            {
+                <Spinner></Spinner>
+            }
+            else
+            {
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Delete @_item.Role.Name</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
@@ -26,12 +28,11 @@ else
                 </div>
                 <div class="modal-body">
                     <div class="container">
-                        <div class="row">                            
-                                <p>
+                        <div class="row">
+                            <p>
                                 Are you sure you want to <strong class="text-danger">DELETE</strong> the <strong>@_item.Role.Name</strong> role?
-                                </p>                                
+                            </p>
                         </div>
-
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -40,10 +41,11 @@ else
                         Delete
                     </button>
                 </div>
-            </div>
+            }            
         </div>
     </div>
-}
+</div>
+
 @if (_showDeleteModal)
 {
     <div class="modal-backdrop fade show"></div>
