--- a/src/BlazorAdmin/Pages/RolePage/List.razor
+++ b/src/BlazorAdmin/Pages/RolePage/List.razor
@@ -7,7 +7,7 @@
 
 <h1>Manage Roles</h1>
 
-@if (roles == null)
+@if (_roles == null)
 {
     <Spinner></Spinner>
 } 
@@ -26,12 +26,15 @@ else
                 </tr>
             </thead>
         <tbody class="cursor-pointer">
-            @foreach (var role in roles){
+            @foreach (var role in _roles){
                     <tr>
                         <td>@role.Name</td>
                         <td>
                             <button @onclick="@(() => EditClick(role.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
                                 Edit
+                            </button>
+                            <button @onclick="@(() => DetailsClick(role.Id,role.Name))" @onclick:stopPropagation="true" class="btn btn-success">
+                                View Members
                             </button>
                             <button @onclick="@(() => DeleteClick(role.Id))" @onclick:stopPropagation="true" class="btn btn-danger">
                                 Delete
@@ -46,4 +49,5 @@ else
     <Create OnSaveClick="ReloadRoles" @ref="CreateComponent"></Create>
     <Delete OnSaveClick="ReloadRoles" @ref="DeleteComponent"></Delete>
     <Edit OnSaveClick="ReloadRoles" @ref="EditComponent"></Edit>
+    <Details @ref="DetailsComponent"></Details>
 }
