--- a/src/BlazorAdmin/Pages/RolePage/Details.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Details.razor
@@ -17,32 +17,48 @@
                 </button>
             </div>
             <div class="modal-body">
-
                 @if (_members == null)
                 {
                     <Spinner></Spinner>
                 }
                 else
-                {
-                    <div class="container">
-                        <div class="row">
-                            <ul>
-                                @foreach (var member in _members){
-                                    <li>@member.UserName</li>
+                {                   
+                    @if (_members.Count == 0)
+                    {
+                        <p>No members found.</p>
+                    }
+                    else
+                    {
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody class="cursor-pointer">
+                                @foreach (var member in _members)
+                                {
+
+                                    <tr>
+                                        <td>@member.UserName</td>
+                                        <td>
+                                            <button @onclick="@(() => DeleteClick(member.Id,member.UserName))" @onclick:stopPropagation="true" class="btn btn-danger">
+                                                Remove from Role
+                                            </button>
+                                        </td>
+                                    </tr>
                                 }
-                            </ul>                           
-                        </div>
-
-                    </div>
+                            </tbody>
+                        </table>
+                    }
                 }
-
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Close</button>                
-            </div>
+            </div>            
         </div>
     </div>
 </div>
+
+<DeleteUserFromRole OnSaveClick="RefreshMembers" @ref="DeleteConfirmationComponent"></DeleteUserFromRole>
 
 @if (_showDetailsModal)
 {
@@ -51,35 +67,60 @@
 
 @code {
     private string _modalDisplay = "none;";
-    private string _modalClass = "";    
+    private string _modalClass = "";
     private bool _showDetailsModal = false;
     private string _roleName = "";
+    private string _roleId = "";
     private List<ApplicationUser> _members = new List<ApplicationUser>();
+    private DeleteUserFromRole DeleteConfirmationComponent { get; set; }
 
-    public async Task Open(string id, string name)
+    private async Task DeleteClick(string userId, string userName)
     {
-        _roleName = name;
+        Logger.LogInformation($"Confirming to remove User {userId} from {_roleName}");
+        await DeleteConfirmationComponent.Open(userId, userName, _roleName, _roleId);
+    }
 
-        Logger.LogInformation("Now loading details for {name}... /Role/Details/{Id}", name, id);
+    public async Task Open(string roleId, string roleName)
+    {
+        _roleName = roleName;
+        _roleId = roleId;
 
-        await new Css(JSRuntime).HideBodyOverflow();
+        Logger.LogInformation("Now loading details for {name}... /Role/Details/{Id}", roleName, roleId);
 
-        _members = (await RoleManagementService.GetMembershipByName(name)).RoleMembers;
 
-        _modalDisplay = "block;";
-        _modalClass = "Show";
-        _showDetailsModal = true;
+        _members = (await RoleManagementService.GetMembershipByName(roleName)).RoleMembers;
+        await ShowModal();
 
         StateHasChanged();
     }
 
     public async Task Close()
     {
+        await CloseModal();
+    }
+
+    private async Task ShowModal(){
+        await new Css(JSRuntime).HideBodyOverflow();
+
+        _modalDisplay = "block;";
+        _modalClass = "Show";
+        _showDetailsModal = true;
+
+    }
+
+    private async Task CloseModal(){
         await new Css(JSRuntime).ShowBodyOverflow();
 
         _modalDisplay = "none";
         _modalClass = "";
         _showDetailsModal = false;
+    }
+
+    private async Task RefreshMembers()
+    {
+        Logger.LogInformation("Refreshing members after removing a user from a role");
+        _members = (await RoleManagementService.GetMembershipByName(_roleName)).RoleMembers;
+        StateHasChanged();
     }
 
 }
