Fixing the Delete endpoints to return NoContent upon success

--- a/src/BlazorAdmin/Pages/RolePage/Delete.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Delete.razor
@@ -62,15 +62,11 @@
 
     private async Task DeleteClick(string id)
     {
-        var deleteResult = await RoleManagementService.Delete(id);
+        await RoleManagementService.Delete(id);
 
-        if (deleteResult != null)
-        {
-
-            Logger.LogInformation($"Deleted Role Id: {id}");
-            await OnSaveClick.InvokeAsync(null);
-            await Close();
-        }
+        Logger.LogInformation($"Deleted Role Id: {id}");
+        await OnSaveClick.InvokeAsync(null);
+        await Close();
     }
 
     public async Task Open(string id)
