--- a/src/BlazorAdmin/Shared/NavMenu.razor
+++ b/src/BlazorAdmin/Shared/NavMenu.razor
@@ -21,10 +21,15 @@
 
                     </NavLink>
                 </li>
-                <AuthorizeView Context="RolesManagement" Roles=@BlazorShared.Authorization.Constants.Roles.ADMINISTRATORS>
+                <AuthorizeView Context="IdentityManagement" Roles=@BlazorShared.Authorization.Constants.Roles.ADMINISTRATORS>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="roles">
                             <span class="oi oi-person" aria-hidden="true"></span> Roles
+                        </NavLink>
+                    </li>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="users">
+                            <span class="oi oi-person" aria-hidden="true"></span> Users
                         </NavLink>
                     </li>
                 </AuthorizeView>
