--- a/src/BlazorAdmin/Pages/UserPage/Create.razor
+++ b/src/BlazorAdmin/Pages/UserPage/Create.razor
@@ -1,9 +1,11 @@
 ﻿@using BlazorAdmin.Interfaces
 @using BlazorAdmin.Models
+@using Microsoft.AspNetCore.Identity
 @using Microsoft.eShopWeb.Infrastructure.Identity
 @inject ILogger<Create> Logger
 @inject IJSRuntime JSRuntime
 @inject IUserManagementService UserManagementService
+@inject IRoleManagementService RoleManagementService
 
 @namespace BlazorAdmin.Pages.UserPage
 
@@ -12,20 +14,18 @@
         <div class="modal-content">
             @if (_item == null)
             {
-
                 <Spinner></Spinner>
-
             }
             else
             {
                 <EditForm Model="_item.User" OnValidSubmit="@CreateClick">
                     <DataAnnotationsValidator />
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Create</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Create</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                     <div class="modal-body">
                         <div class="container">
                             <div class="row">
@@ -79,14 +79,31 @@
                                 </div>
                             </div>
                         </div>
+                        <h4>Roles</h4>
+                        @if (_roles == null || _roles.Count == 0)
+                        {
+                            <p>No roles available.</p>
+                        }
+                        else
+                        {
+                            @foreach (var role in _roles)
+                            {
+                                <div class="form-group row form-check">
+                                    <div class="col-md-6">
+                                        <input type="checkbox" class="form-check-input" @onchange="(e) => UpdateRoleSelectedState(role.Name, (bool)((ChangeEventArgs)e).Value)" />
+                                        <label class="form-check-label">@role</label>
+                                    </div>
+                                </div>
+                            }
+                        }
                     </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Cancel</button>
-                    <button type="submit" class="btn btn-primary">
-                        Create
-                    </button>
-                </div>
-            </EditForm>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Cancel</button>
+                        <button type="submit" class="btn btn-primary">
+                            Create
+                        </button>
+                    </div>
+                </EditForm>
             }
         </div>
     </div>
@@ -100,6 +117,9 @@
 }
 
 @code {
+
+
+
     [Parameter]
     public EventCallback<string> OnSaveClick { get; set; }
 
@@ -108,11 +128,23 @@
     private bool _showCreateModal = false;
     private CreateUserRequest _item;
 
+    private Dictionary<string, bool> _selectedRoles = new();
+    private List<IdentityRole>  _roles;
+
     private async Task CreateClick()
     {
         if (_item.User != null)
         {
             var result = await UserManagementService.Create(_item);
+            var checkedRoles = _selectedRoles.Where(r => r.Value).Select(r => r.Key).ToList();
+            if (checkedRoles.Any()){
+                SaveRolesForUserRequest rolesForUserRequest = new SaveRolesForUserRequest(){
+                    UserId = _item.User.Id,
+                    RolesToAdd = checkedRoles
+                };
+
+                await UserManagementService.SaveRolesForUser(rolesForUserRequest);
+            }
             if (result != null)
             {
                 Logger.LogInformation($"Created User {result.User.Id}");
@@ -131,11 +163,18 @@
 
         _item = new CreateUserRequest();
 
+        _roles = (await RoleManagementService.List()).Roles;
+  
         _modalDisplay = "block;";
         _modalClass = "Show";
         _showCreateModal = true;
 
         StateHasChanged();
+    }
+
+    private void UpdateRoleSelectedState(string role, bool isChecked)
+    {
+        _selectedRoles[role] = isChecked;
     }
 
     private async Task Close()
