--- a/src/BlazorAdmin/Pages/UserPage/List.razor
+++ b/src/BlazorAdmin/Pages/UserPage/List.razor
@@ -10,36 +10,45 @@
 @if (_users == null)
 {
     <Spinner></Spinner>
-} 
-else 
+}
+else
 {
-        <p class="esh-link-wrapper">
-            <button class="btn btn-primary" @onclick="@(CreateClick)">
-                Create New
-            </button>
-        </p>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+    <p class="esh-link-wrapper">
+        <button class="btn btn-primary" @onclick="@(CreateClick)">
+            Create New
+        </button>
+    </p>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Email</th>
+                <th>Email Confirmed</th>
+                <th>Phone Confirmed</th>
+                <th>Lockout End Date</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
         <tbody class="cursor-pointer">
-            @foreach (var user in _users){
-                    <tr>
-                        <td>@user.UserName</td>
-                        <td>
+            @foreach (var user in _users)
+            {
+                <tr>
+                    <td>@user.UserName</td>
+                    <td>@user.Email</td>
+                    <td>@user.EmailConfirmed</td>
+                    <td>@user.PhoneNumberConfirmed</td>
+                    <td>@user.LockoutEnd</td>
+                    <td>
                         <button @onclick="@(() => EditClick(user.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
                             Edit
                         </button>
                         <button @onclick="@(() => DeleteClick(user.Id,user.UserName))" @onclick:stopPropagation="true" class="btn btn-danger">
-                                Delete
-                            </button>
-                        </td>
-                    </tr>
+                            Delete
+                        </button>
+                    </td>
+                </tr>
 
-                }
+            }
         </tbody>
     </table>
 
