Fixing Logger.LogInformation to use arguments for better handling for structured loggers

--- a/src/BlazorAdmin/Pages/RolePage/Create.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Create.razor
@@ -72,7 +72,7 @@
         var result = await RoleManagementService.Create(_item);
         if (result != null)
         {
-            Logger.LogInformation($"Created {result.Role.Name} Role ({result.Role.Id})");
+            Logger.LogInformation("Created Role ({id})", result.Role.Id);
             await OnSaveClick.InvokeAsync(null);
             await Close();
         }
