--- a/src/BlazorAdmin/Pages/RolePage/Edit.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Edit.razor
@@ -77,7 +77,7 @@
     {
         await RoleManagementService.Edit(_item);
 
-        Logger.LogInformation($"Updated Role Id: {_item.Id} with name {_item.Name}");
+        Logger.LogInformation("Updated Role Id: {Id} with name {name}", _item.Id, _item.Name);
         await OnSaveClick.InvokeAsync(null);
         await Close();
     }
