Updated log messaging and CreateUser endpoint following defensive programming techniques; updated CreateUser endpoint

--- a/src/BlazorAdmin/Pages/RolePage/Delete.razor
+++ b/src/BlazorAdmin/Pages/RolePage/Delete.razor
@@ -74,7 +74,7 @@
         await new Css(JSRuntime).HideBodyOverflow();
 
         _item = await RoleManagementService.GetById(id);
-        Logger.LogInformation("Loaded role: {roleName}", _item.Role.Name);
+        Logger.LogInformation("Loaded role: {id}", id);
 
         _modalDisplay = "block;";
         _modalClass = "Show";
